@@ -107,12 +107,6 @@ private:
 	      Cell_handle pos[Triangulation_hierarchy_3__maxlevel]) const;
   int random_level();
 
-  bool
-  less_distance(const Point &p, const Point &q, const Point &r) const
-  {
-    return geom_traits().compare_distance_3_object()(p, q, r) == SMALLER;
-  }
-
   // added to make the test program of usual triangulations work
   // undocumented
 public:
@@ -338,7 +332,6 @@ locate(const Point& p, Locate_type& lt, int& li, int& lj,
        Cell_handle pos[Triangulation_hierarchy_3__maxlevel]) const
 {
   Cell_handle position;
-  Vertex_handle nearest;
   int level  = Triangulation_hierarchy_3__maxlevel;
 
   // find the highest level with enough vertices
@@ -346,31 +339,16 @@ locate(const Point& p, Locate_type& lt, int& li, int& lj,
 	 < Triangulation_hierarchy_3__minsize){
     if ( ! level) break;  // do not go below 0
   }
-  for (int i=level+1; i<Triangulation_hierarchy_3__maxlevel;++i) pos[i]=0;
+  for (int i=level+1; i<Triangulation_hierarchy_3__maxlevel; ++i)
+      pos[i]=0;
   while(level > 0) {
-    pos[level]=position=hierarchy[level]->locate(p,position);
     // locate at that level from "position"
     // result is stored in "position" for the next level
-    // find the nearest between vertices 0 and 1
-    if (hierarchy[level]->is_infinite(position->vertex(0)))
-      nearest = position->vertex(1);
-    else if (hierarchy[level]->is_infinite(position->vertex(1)))
-      nearest = position->vertex(0);
-    else if ( less_distance(p, position->vertex(0)->point(),
-		            position->vertex(1)->point()))
-      nearest = position->vertex(0);
-    else
-      nearest = position->vertex(1);
-    // compare to vertex 2
-    if ( dimension() >= 2
-      && ( ! hierarchy[level]->is_infinite(position->vertex(2)))
-      && ( less_distance(p, position->vertex(2)->point(), nearest->point())))
-	nearest = position->vertex(2);
-    // compare to vertex 3
-    if ( dimension() == 3
-      && ( ! hierarchy[level]->is_infinite(position->vertex(3)))
-      && ( less_distance(p, position->vertex(3)->point(), nearest->point())))
-	nearest = position->vertex(3);
+    pos[level]=position=hierarchy[level]->locate(p,position);
+    // find the nearest vertex.
+    Vertex_handle nearest =
+	hierarchy[level]->nearest_vertex_in_cell(p, position);
+
     // go at the same vertex on level below
     nearest = (Vertex*)( nearest->down() );
     position = nearest->cell();                // incident cell
